<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ERROR" Id="{ac6f3ce2-2d8c-05ad-3aa6-047cfa96fba9}">
    <Declaration><![CDATA[// STRUCT used to contain error status information.
{attribute 'enable_dynamic_creation'}
TYPE ST_ERROR :
STRUCT
	bSTATUS : BOOL; 		// Indicates if an error has occurred | TRUE = error, FALSE = no error
	nCODE 	: DINT; 		// Error code specific to the particular error.
	sSOURCE : T_MaxString; 	// Textual information describing the error.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>